# Inclinometer-and-Compass-based-on-GY-511-board-for-Embedded-Linux

./: .gitignore  CMakeLists.txt  Invite on interview  README.md  main.cpp
.github/workflows/: cmake.yml
calibration/: calibration.cpp  calibration.h  ellipsoid_fit_calibration.cpp  ellipsoid_fit_calibration.h  min_max_calibration.cpp  min_max_calibration.h
gy_511/: accelerometer.cpp  accelerometer.h  gy511_based_imu.cpp  gy511_based_imu.h  magnetometer.cpp  magnetometer.h  registers.h
i2c/: i2c.c
imu/: i2c_imu_device.cpp  i2c_imu_device.h  imu.cpp  imu.h  imu_sensor.h
settings/: main_settings.json
tests/: tests.cpp
tests/data/: mag_16.txt
